Fix widget text alignment

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -191,6 +191,7 @@ main {
 .weather-details-container {
   margin-top: 30px;
   height: 100%;
+    text-align: center;
 }
 
 .weather-details {
